// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineMessage tests is a basic snapshot 1`] = `
<p
  class="flex items-center text-75 transition-colors duration-150 text-blue-700 dark:text-blue-400 "
  id="test-inline-message"
  role="alert"
>
  <span
    aria-hidden="true"
    class="mr-1 w-6 h-6 transition-colors duration-150"
  >
    <svg
      class="fill-current transition-colors duration-150"
      viewBox="0 0 20 20"
    >
      <use
        href="/assets/icons/connectivity.svg#connectivity"
      />
    </svg>
  </span>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt asperiores cupiditate, voluptas non ab soluta. Non odit facere quae tempora.
</p>
`;

exports[`InlineMessage tests is a snapshot with a "confirmation" type appearance 1`] = `
<p
  class="flex items-center text-75 transition-colors duration-150 text-green-800 dark:text-green-400 "
  id="test-inline-message"
  role="alert"
>
  <span
    aria-hidden="true"
    class="mr-1 w-6 h-6 transition-colors duration-150"
  >
    <svg
      class="fill-current transition-colors duration-150"
      viewBox="0 0 20 20"
    >
      <use
        href="/assets/icons/confirmation.svg#confirmation"
      />
    </svg>
  </span>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt asperiores cupiditate, voluptas non ab soluta. Non odit facere quae tempora.
</p>
`;

exports[`InlineMessage tests is a snapshot with a "connectivity" type appearance 1`] = `
<p
  class="flex items-center text-75 transition-colors duration-150 text-blue-700 dark:text-blue-400 "
  id="test-inline-message"
  role="alert"
>
  <span
    aria-hidden="true"
    class="mr-1 w-6 h-6 transition-colors duration-150"
  >
    <svg
      class="fill-current transition-colors duration-150"
      viewBox="0 0 20 20"
    >
      <use
        href="/assets/icons/connectivity.svg#connectivity"
      />
    </svg>
  </span>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt asperiores cupiditate, voluptas non ab soluta. Non odit facere quae tempora.
</p>
`;

exports[`InlineMessage tests is a snapshot with a "error" type appearance 1`] = `
<p
  class="flex items-center text-75 transition-colors duration-150 text-red-700 dark:text-red-400 "
  id="test-inline-message"
  role="alert"
>
  <span
    aria-hidden="true"
    class="mr-1 w-6 h-6 transition-colors duration-150"
  >
    <svg
      class="fill-current transition-colors duration-150"
      viewBox="0 0 20 20"
    >
      <use
        href="/assets/icons/error.svg#error"
      />
    </svg>
  </span>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt asperiores cupiditate, voluptas non ab soluta. Non odit facere quae tempora.
</p>
`;

exports[`InlineMessage tests is a snapshot with a "info" type appearance 1`] = `
<p
  class="flex items-center text-75 transition-colors duration-150 text-purple-700 dark:text-purple-400 "
  id="test-inline-message"
  role="alert"
>
  <span
    aria-hidden="true"
    class="mr-1 w-6 h-6 transition-colors duration-150"
  >
    <svg
      class="fill-current transition-colors duration-150"
      viewBox="0 0 20 20"
    >
      <use
        href="/assets/icons/info.svg#info"
      />
    </svg>
  </span>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt asperiores cupiditate, voluptas non ab soluta. Non odit facere quae tempora.
</p>
`;

exports[`InlineMessage tests is a snapshot with a "warning" type appearance 1`] = `
<p
  class="flex items-center text-75 transition-colors duration-150 text-orange-800 dark:text-yellow-300 "
  id="test-inline-message"
  role="alert"
>
  <span
    aria-hidden="true"
    class="mr-1 w-6 h-6 transition-colors duration-150"
  >
    <svg
      class="fill-current transition-colors duration-150"
      viewBox="0 0 20 20"
    >
      <use
        href="/assets/icons/warning.svg#warning"
      />
    </svg>
  </span>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt asperiores cupiditate, voluptas non ab soluta. Non odit facere quae tempora.
</p>
`;

exports[`InlineMessage tests is a snapshot with the icon on the left 1`] = `
<p
  class="flex items-center text-75 transition-colors duration-150 text-blue-700 dark:text-blue-400 "
  id="test-inline-message"
  role="alert"
>
  <span
    aria-hidden="true"
    class="mr-1 w-6 h-6 transition-colors duration-150"
  >
    <svg
      class="fill-current transition-colors duration-150"
      viewBox="0 0 20 20"
    >
      <use
        href="/assets/icons/connectivity.svg#connectivity"
      />
    </svg>
  </span>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt asperiores cupiditate, voluptas non ab soluta. Non odit facere quae tempora.
</p>
`;

exports[`InlineMessage tests is a snapshot with the icon on the right 1`] = `
<p
  class="flex items-center text-75 transition-colors duration-150 text-blue-700 dark:text-blue-400 "
  id="test-inline-message"
  role="alert"
>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt asperiores cupiditate, voluptas non ab soluta. Non odit facere quae tempora.
  <span
    aria-hidden="true"
    class="mr-1 w-6 h-6 transition-colors duration-150"
  >
    <svg
      class="fill-current transition-colors duration-150"
      viewBox="0 0 20 20"
    >
      <use
        href="/assets/icons/connectivity.svg#connectivity"
      />
    </svg>
  </span>
</p>
`;
